--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,21 +12,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/DevWork/3_AD5941/3.DisplayPart/.pio/build/esp32Debug/firmware.elf",
-            "projectEnvName": "esp32Debug",
+            "executable": "C:/DevWork/3_AD5941/3.DisplayPart/.pio/build/esp32Release/firmware.elf",
+            "projectEnvName": "esp32Release",
             "toolchainBinDir": "C:/Users/ServerManager/.platformio/packages/toolchain-xtensa-esp32s3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (esp32Debug)"
+                "task": "Pre-Debug (esp32Release)"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/DevWork/3_AD5941/3.DisplayPart/.pio/build/esp32Debug/firmware.elf",
-            "projectEnvName": "esp32Debug",
+            "executable": "C:/DevWork/3_AD5941/3.DisplayPart/.pio/build/esp32Release/firmware.elf",
+            "projectEnvName": "esp32Release",
             "toolchainBinDir": "C:/Users/ServerManager/.platformio/packages/toolchain-xtensa-esp32s3/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
@@ -34,8 +34,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/DevWork/3_AD5941/3.DisplayPart/.pio/build/esp32Debug/firmware.elf",
-            "projectEnvName": "esp32Debug",
+            "executable": "C:/DevWork/3_AD5941/3.DisplayPart/.pio/build/esp32Release/firmware.elf",
+            "projectEnvName": "esp32Release",
             "toolchainBinDir": "C:/Users/ServerManager/.platformio/packages/toolchain-xtensa-esp32s3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
