mark modbus version

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,8 @@ monitor_filters = default
 upload_port = COM3
 monitor_port = COM3
 board_build.partitions = default_8MB.csv
+lib_deps = 
+    miq19/eModbus@^1.7.2
 [env:esp32Release]
 build_flags =
     -DBAUDRATEDEF=9600
@@ -26,8 +28,8 @@ build_flags =
 [env:esp32Debug]
 build_flags =
     -DBAUDRATEDEF=9600
-    -DCORE_DEBUG_LEVEL=3
-	-DLOG_LEVEL=3
+    -DCORE_DEBUG_LEVEL=5
+	-DLOG_LEVEL=5
     -DUSEWIFI
     ;-Os
     ;-std=gnu++11
